[tool.poetry]
name = "learning-langchain"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "learning_langchain"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.125"
openai = "^0.27.2"
chromadb = "^0.3.14"
unstructured = "^0.5.7"
bs4 = "^0.0.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
